test/conformance/chainsaw/mutating-policies/existing/reject-all-modes-disabled/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: MutatingPolicy
metadata:
  name: test-mpol-all-modes-disabled
spec:
  evaluation:
    admission:
      enabled: false
    mutateExisting:
      enabled: false
  matchConstraints:
    resourceRules:
    - apiGroups: [ "" ]
      apiVersions: [ "v1" ]
      operations: [ "CREATE", "UPDATE" ]
      resources: [ "configmaps" ]
  mutations:
  - patchType: ApplyConfiguration
    applyConfiguration:
      expression: >
        Object{
          metadata: Object.metadata{
            labels: Object.metadata.labels{
              foo: "bar"
            }
          }
        }
